# segmentation_failures_benchmark

./: LICENSE  README.md  pyproject.toml
analysis/: bootstrap_ranking.py  check_training_progress.ipynb  paper_analysis.py  utils.py
assets/: table_big_comparison_multimetric.html
dataset_splits/: readme.md
dataset_splits/Dataset500_simple_fets_corruptions/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset503_BraTS19/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset511_MnM_VendorB_train/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset514_MVSeg23/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset515_KiTS23/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset520_CovidLungCT/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset521_ProstateGonzalez/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset531_DoFEOpticDiscCup_512/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset540_RETOUCH_ood=Cirrus/: domain_mapping_00.json  splits_final.json
dataset_splits/Dataset560_OCTA500_pathology_split/: domain_mapping_00.json  splits_final.json
src/segmentation_failures/callbacks/: batch_logging.py  confidence_map_writer.py  network_graph_tb.py  prediction_writer.py  quality_estimator_monitor.py  results_writer.py
src/segmentation_failures/conf/: config.yaml
src/segmentation_failures/evaluation/: __init__.py  experiment_data.py
tests/callbacks/: test_results_writer.py
tests/evaluation/: test_ood_metrics.py  test_seg_metrics.py
(+180 files in other folders)
